<resources>
    <string name="app_name">Recipes Book</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign up</string>
    <string name="email_or_username">"Email or User "</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="forget_password">Forget Password</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trending">Trending</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="create">Create</string>
    <string name="profile">Profile</string>
</resources>