<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".view.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:elevation="10dp"
        app:cardCornerRadius="28dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/switch_tumbs"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="1dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tvLogIn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/switch_trcks"
                    android:gravity="center"
                    android:paddingLeft="16dp"
                    android:paddingTop="6dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="6dp"
                    android:text="@string/log_in"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold|normal" />

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="16dp"
                    android:paddingTop="6dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="6dp"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textColor="#F51D1E22"
                    android:textSize="16sp"
                    android:textStyle="bold|normal" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/logInLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="24dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:hint="@string/email_or_username"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:shapeAppearanceOverlay="@style/Button4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:hint="@string/password"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:endIconMode="password_toggle"
                    app:shapeAppearanceOverlay="@style/Button4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/forget_password"
                    android:textAlignment="textEnd"
                    android:textColor="#616161"
                    android:textSize="11sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/signUpLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="24dp"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:hint="@string/email_or_username"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:shapeAppearanceOverlay="@style/Button4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmailSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:hint="@string/password"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:endIconMode="password_toggle"
                    app:shapeAppearanceOverlay="@style/Button4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:hint="@string/confirm_password"

                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:endIconMode="password_toggle"
                    app:shapeAppearanceOverlay="@style/Button4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtRePass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/btn_log_in"
                android:elevation="16dp"
                android:gravity="center"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/btn_log_in"
                android:elevation="16dp"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/or"
                android:textAlignment="center"
                android:textColor="#474646"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">


                <ImageButton
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="10dp"
                    android:background="@color/transparentColor"
                    android:scaleType="fitXY"
                    android:src="@drawable/facebook" />

                <ImageButton
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="10dp"
                    android:background="@color/transparentColor"
                    android:scaleType="fitXY"
                    android:src="@drawable/google" />
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>